Add authentication handling to InvestmentBuilderService

--- a/InvestmentBuilderService/InvestmentBuilderService.csproj
+++ b/InvestmentBuilderService/InvestmentBuilderService.csproj
@@ -33,6 +33,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Practices.Unity, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.Configuration, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="MiddlewareInterfaces, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Middleware\Middleware\bin\Debug\MiddlewareInterfaces.dll</HintPath>
@@ -43,6 +55,10 @@
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\Middleware\Middleware\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.3.0\lib\net45\NLog.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -74,19 +90,22 @@
     <Compile Include="Dtos\TradeItemDto.cs" />
     <Compile Include="EndpointChannel.cs" />
     <Compile Include="EndpointManager.cs" />
-    <Compile Include="InvestmentBuilderController.cs" />
+    <Compile Include="Session\IConnectionSession.cs" />
     <Compile Include="Dtos\InvestmentSummaryModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Channels\UpdateAccountEndpointChannel.cs" />
+    <Compile Include="Session\MiddlewareSession.cs" />
     <Compile Include="Translators\Translators.cs" />
     <Compile Include="UserSession.cs" />
     <Compile Include="UserSessionManager.cs" />
     <Compile Include="Utils\BuildReportMonitor.cs" />
+    <Compile Include="Utils\ConnectionSettings.cs" />
     <Compile Include="Utils\SaltedHash.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\InvestmentBuilderCore\InvestmentBuilderCore.csproj">
@@ -97,12 +116,27 @@
       <Project>{9fa7e2cc-b5c6-463b-856a-e0e21eff93e4}</Project>
       <Name>InvestmentBuilderLib</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MarketDataServices\MarketDataServices.csproj">
+      <Project>{13bae8cd-2876-44c4-a39a-74f7313fba80}</Project>
+      <Name>MarketDataServices</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PerformanceBuilderLib\PerformanceBuilderLib.csproj">
       <Project>{a69b4e7e-44c1-4c52-9c86-5c1148131c79}</Project>
       <Name>PerformanceBuilderLib</Name>
     </ProjectReference>
+    <ProjectReference Include="..\PerformanceBuilder\PerformanceBuilder.csproj">
+      <Project>{bca240b5-1bac-4bff-af1d-32a17adda1f6}</Project>
+      <Name>PerformanceBuilder</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SQLServerDataLayer\SQLServerDataLayer.csproj">
+      <Project>{674585e8-84aa-4111-b675-47f7e13c8cb7}</Project>
+      <Name>SQLServerDataLayer</Name>
+    </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Connections.xml" />
+    <Content Include="InvestmentBuilderConfig.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
