--- a/InvestmentReportGenerator/packages.config
+++ b/InvestmentReportGenerator/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="NLog" version="4.3.0" targetFramework="net45" />
   <package id="PDFsharp-MigraDoc-GDI" version="1.32.4334.0" targetFramework="net452" />
+  <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
 </packages>
