--- a/InvestmentBuilderService/App.config
+++ b/InvestmentBuilderService/App.config
@@ -1,6 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+  <configSections>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
+  </configSections>
+
+  <nlog throwExceptions="true" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <targets>
+      <target name="consoleLogger" xsi:type="Console" layout="${level} ${message}"></target>
+    </targets>
+    <rules>
+      <logger name="*" minlevel="Debug" maxlevel="Error" writeTo="consoleLogger"></logger>
+    </rules>
+  </nlog>
 </configuration>
