InvestmentBuilderWebService modifications and fixes. Added new project InvestmentBuilderWebClient. Using Gulp task runner

--- a/InvestmentBuilderService/InvestmentBuilderService.csproj
+++ b/InvestmentBuilderService/InvestmentBuilderService.csproj
@@ -103,7 +103,6 @@
     <Compile Include="UserSessionManager.cs" />
     <Compile Include="Utils\BuildReportMonitor.cs" />
     <Compile Include="Utils\ConnectionSettings.cs" />
-    <Compile Include="Utils\SaltedHash.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -117,6 +116,10 @@
     <ProjectReference Include="..\InvestmentBuilderLib\InvestmentBuilderLib.csproj">
       <Project>{9fa7e2cc-b5c6-463b-856a-e0e21eff93e4}</Project>
       <Name>InvestmentBuilderLib</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\InvestmentReportGenerator\InvestmentReportGenerator.csproj">
+      <Project>{67e92f66-3a85-4122-8d1e-dcfd499c64bf}</Project>
+      <Name>InvestmentReportGenerator</Name>
     </ProjectReference>
     <ProjectReference Include="..\MarketDataServices\MarketDataServices.csproj">
       <Project>{13bae8cd-2876-44c4-a39a-74f7313fba80}</Project>
