--- a/InvestmentBuilderCore/InvestmentBuilderCore.csproj
+++ b/InvestmentBuilderCore/InvestmentBuilderCore.csproj
@@ -75,6 +75,7 @@
     <Compile Include="InvestmentUtils.cs" />
     <Compile Include="ProgressCounter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SaltedHash.cs" />
     <Compile Include="TradeLoader.cs" />
   </ItemGroup>
   <ItemGroup>
