more changes to investmentbuilderweb and investmentbuilderservices

--- a/InvestmentBuilderService/InvestmentBuilderService.csproj
+++ b/InvestmentBuilderService/InvestmentBuilderService.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Channels\BuildReportChannel.cs" />
     <Compile Include="Channels\CheckBuildStatusChannel.cs" />
     <Compile Include="Channels\DeleteTransactionChannel.cs" />
+    <Compile Include="Channels\GetAccountNamesChannel.cs" />
     <Compile Include="Channels\GetCashFlowChannel.cs" />
     <Compile Include="Channels\GetRecentValutationDatesChannel.cs" />
     <Compile Include="Channels\GetTransactionParametersChannel.cs" />
