fixes for dividend calculation and balanceinhand bug. More InvstmentBuildrWeb changes

--- a/InvestmentReportGenerator/InvestmentReportGenerator.csproj
+++ b/InvestmentReportGenerator/InvestmentReportGenerator.csproj
@@ -60,6 +60,10 @@
       <HintPath>..\packages\PDFsharp-MigraDoc-GDI.1.32.4334.0\lib\net20\MigraDoc.RtfRendering.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="NLog">
       <HintPath>..\packages\NLog.4.3.0\lib\net45\NLog.dll</HintPath>
     </Reference>
