Code tidy up. Added Nlog logging. Implemented report building functionlaity through web interface

--- a/InvestmentBuilderClient/App.config
+++ b/InvestmentBuilderClient/App.config
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
   </configSections>
 
   <nlog throwExceptions="true" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
@@ -10,8 +10,8 @@
       <target name="fileLogger" xsi:type="File" layout="${longdate} ${callsite} ${level} ${message}" fileName="InvestmentBuilder.log"></target>
       <!--${logger}.txt-->
       <target name="viewLogger" xsi:type="MethodCall" className="InvestmentBuilderClient.View.MainView, InvestmentBuilderClient" methodName="LogMethod">
-        <parameter layout="${level}" />
-        <parameter layout="${message}" />
+        <parameter layout="${level}"/>
+        <parameter layout="${message}"/>
       </target>
     </targets>
     <rules>
@@ -20,4 +20,4 @@
       <logger name="*" minlevel="Debug" maxlevel="Error" writeTo="viewLogger"></logger>
     </rules>
   </nlog>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
