Implmented Reports page in web project

--- a/InvestmentBuilderService/App.config
+++ b/InvestmentBuilderService/App.config
@@ -7,9 +7,11 @@
   <nlog throwExceptions="true" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <targets>
       <target name="consoleLogger" xsi:type="Console" layout="${level} ${message}"></target>
+      <target name="fileLogger" xsi:type="File" layout="${longdate} ${callsite} ${level} ${message}" fileName="InvestmentBuilderService.log"></target>
     </targets>
     <rules>
-      <logger name="*" minlevel="Debug" maxlevel="Error" writeTo="consoleLogger"></logger>
+      <logger name="*" minlevel="Trace" maxlevel="Error" writeTo="consoleLogger"></logger>
+      <logger name="*" minlevel="Debug" maxlevel="Error" writeTo="fileLogger"></logger>
     </rules>
   </nlog>
   <runtime>
