--- a/InvestmentBuilderService/InvestmentBuilderService.csproj
+++ b/InvestmentBuilderService/InvestmentBuilderService.csproj
@@ -19,7 +19,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\bin\Debug\</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -81,6 +81,8 @@
     <Compile Include="AccountService.cs" />
     <Compile Include="CashFlowManager.cs" />
     <Compile Include="ChannelEndpointManager.cs" />
+    <Compile Include="Channels\GetAccountDetailsChannel.cs" />
+    <Compile Include="Channels\GetCurrenciesChannel.cs" />
     <Compile Include="Channels\GetRecentReportFiles.cs" />
     <Compile Include="Channels\RemoveTransactionChannel.cs" />
     <Compile Include="Channels\AddTransactionChannel.cs" />
@@ -92,6 +94,7 @@
     <Compile Include="Channels\GetTransactionParametersChannel.cs" />
     <Compile Include="Channels\LoadReportChannel.cs" />
     <Compile Include="Channels\SellTradeRequestChannel.cs" />
+    <Compile Include="Channels\UpdateAccountDetailsChannel.cs" />
     <Compile Include="Channels\UpdateTradeChannel.cs" />
     <Compile Include="Channels\GetInvestmentSummaryChannel.cs" />
     <Compile Include="Channels\GetPortfolioChannel.cs" />
@@ -102,11 +105,12 @@
     <Compile Include="Dtos\TradeItemDto.cs" />
     <Compile Include="EndpointChannel.cs" />
     <Compile Include="EndpointManager.cs" />
+    <Compile Include="Channels\GetBrokersChannel.cs" />
     <Compile Include="Session\IConnectionSession.cs" />
     <Compile Include="Dtos\InvestmentSummaryModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Channels\UpdateAccountEndpointChannel.cs" />
+    <Compile Include="Channels\UpdateCurrentAccountChannel.cs" />
     <Compile Include="Session\MiddlewareSession.cs" />
     <Compile Include="Translators\Translators.cs" />
     <Compile Include="UserSession.cs" />
@@ -154,6 +158,7 @@
     </Content>
     <Content Include="InvestmentBuilderConfig.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
