Split updateaccount functionality into separate CreateAccount and UpdateAccount methods (CRUD)

--- a/InvestmentBuilderService/InvestmentBuilderService.csproj
+++ b/InvestmentBuilderService/InvestmentBuilderService.csproj
@@ -81,6 +81,7 @@
     <Compile Include="AccountService.cs" />
     <Compile Include="CashFlowManager.cs" />
     <Compile Include="ChannelEndpointManager.cs" />
+    <Compile Include="Channels\CreateAccountChannel.cs" />
     <Compile Include="Channels\GetAccountDetailsChannel.cs" />
     <Compile Include="Channels\GetCurrenciesChannel.cs" />
     <Compile Include="Channels\GetRecentReportFiles.cs" />
