--- a/InvestmentBuilderWebClient/Config.json
+++ b/InvestmentBuilderWebClient/Config.json
@@ -1,4 +1,4 @@
 {
   "url": "ws://localhost:8080/MWARE",
-  "registerurl": "http://localhost:8080/REGISTER"  
+  "registerurl": "http://localhost:8080/MANAGE"  
 }
