added UndoLastTransaction and AddRedemption functionality

--- a/InvestmentBuilderProcessLauncher/InvestmentBuilderProcessLauncher.vcxproj
+++ b/InvestmentBuilderProcessLauncher/InvestmentBuilderProcessLauncher.vcxproj
@@ -115,7 +115,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>copy $(ProjectDir)processes.xml $(OutDir)</Command>
+      <Command>copy $(ProjectDir)ProcessLauncherConfiguration.xml $(OutDir)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -156,7 +156,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>copy $(ProjectDir)processes.xml $(OutDir)</Command>
+      <Command>copy $(ProjectDir)ProcessLauncherConfiguration.xml $(OutDir)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -174,7 +174,7 @@
     <ClCompile Include="Utils.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Xml Include="processes.xml" />
+    <Xml Include="ProcessLauncherConfiguration.xml" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
