--- a/InvestmentBuilderService/InvestmentBuilderService.csproj
+++ b/InvestmentBuilderService/InvestmentBuilderService.csproj
@@ -81,10 +81,13 @@
     <Compile Include="AccountService.cs" />
     <Compile Include="CashFlowManager.cs" />
     <Compile Include="ChannelEndpointManager.cs" />
+    <Compile Include="Channels\RequestRedemptionChannel.cs" />
     <Compile Include="Channels\CreateAccountChannel.cs" />
     <Compile Include="Channels\GetAccountDetailsChannel.cs" />
     <Compile Include="Channels\GetCurrenciesChannel.cs" />
+    <Compile Include="Channels\GetLastTransactionChannel.cs" />
     <Compile Include="Channels\GetRecentReportFiles.cs" />
+    <Compile Include="Channels\GetRedemptionsChannel.cs" />
     <Compile Include="Channels\RemoveTransactionChannel.cs" />
     <Compile Include="Channels\AddTransactionChannel.cs" />
     <Compile Include="Channels\BuildReportChannel.cs" />
@@ -95,6 +98,7 @@
     <Compile Include="Channels\GetTransactionParametersChannel.cs" />
     <Compile Include="Channels\LoadReportChannel.cs" />
     <Compile Include="Channels\SellTradeRequestChannel.cs" />
+    <Compile Include="Channels\UndoLastTransactionChannel.cs" />
     <Compile Include="Channels\UpdateAccountDetailsChannel.cs" />
     <Compile Include="Channels\UpdateTradeChannel.cs" />
     <Compile Include="Channels\GetInvestmentSummaryChannel.cs" />
