--- a/InvestmentBuilderWebClient/InvestmentBuilderWebClient.csproj
+++ b/InvestmentBuilderWebClient/InvestmentBuilderWebClient.csproj
@@ -33,10 +33,12 @@
     <Content Include="src\AddAccount.js" />
     <Content Include="src\CashFlow.js" />
     <Content Include="src\CreateTrade.js" />
+    <Content Include="src\LastTransaction.js" />
     <Content Include="src\Layout.js" />
     <Content Include="src\MiddlewareService.js" />
     <Content Include="src\NotifyService.js" />
     <Content Include="src\Portfolio.js" />
+    <Content Include="src\Redemptions.js" />
     <Content Include="src\RegisterModules.js" />
     <Content Include="src\RegisterUser.js" />
     <Content Include="src\Reports.js" />
@@ -58,7 +60,9 @@
     <Content Include="UserTemplate.html" />
     <Content Include="views\AccountList.html" />
     <Content Include="views\AddAccount.html" />
+    <Content Include="views\LastTransaction.html" />
     <Content Include="views\Layout.html" />
+    <Content Include="views\Redemptions.html" />
     <Content Include="web.config" />
   </ItemGroup>
   <ItemGroup>
