--- a/InvestmentBuilderWebClient/InvestmentBuilderWebClient.csproj
+++ b/InvestmentBuilderWebClient/InvestmentBuilderWebClient.csproj
@@ -33,7 +33,7 @@
     <Content Include="src\AddAccount.js" />
     <Content Include="src\CashFlow.js" />
     <Content Include="src\CashTransaction.js" />
-    <Content Include="src\CreateTrade.js" />
+    <Content Include="src\AddInvestment.js" />
     <Content Include="src\LastTransaction.js" />
     <Content Include="src\Layout.js" />
     <Content Include="src\MiddlewareService.js" />
@@ -76,7 +76,7 @@
     <Content Include="views\AddModalDialog.html" />
     <Content Include="views\AddTransaction.html" />
     <Content Include="views\CashFlow.html" />
-    <Content Include="views\CreateTrade.html" />
+    <Content Include="views\AddInvestment.html" />
     <Content Include="views\EditTrade.html" />
     <Content Include="views\Parameters.html" />
     <Content Include="views\Portfolio.html" />
