--- a/InvestmentBuilderService/App.config
+++ b/InvestmentBuilderService/App.config
@@ -7,7 +7,16 @@
   <nlog throwExceptions="true" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <targets>
       <target name="consoleLogger" xsi:type="Console" layout="${level} ${message}"></target>
-      <target name="fileLogger" xsi:type="File" layout="${longdate} ${callsite} ${level} ${message}" fileName="InvestmentBuilderService.log"></target>
+      <target name="fileLogger"
+              xsi:type="File"
+              layout="${longdate} ${callsite} ${level} ${message}"
+              fileName="InvestmentBuilderService.log"
+              deleteOldFileOnStartup="true"
+              maxArchiveFiles="30"
+              archiveFileName="archive/InvestmentBuilderService_{###}.log"
+              archiveNumbering="Rolling"
+              archiveEvery="Day">
+      </target>
     </targets>
     <rules>
       <logger name="*" minlevel="Trace" maxlevel="Error" writeTo="consoleLogger"></logger>
