--- a/InvestmentBuilderCore/InvestmentBuilderCore.csproj
+++ b/InvestmentBuilderCore/InvestmentBuilderCore.csproj
@@ -83,6 +83,10 @@
     <Compile Include="ProgressCounter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SaltedHash.cs" />
+    <Compile Include="Schedule\IScheduledTask.cs" />
+    <Compile Include="Schedule\ScheduledTaskDetails.cs" />
+    <Compile Include="Schedule\ScheduledTaskFactory.cs" />
+    <Compile Include="Schedule\Scheduler.cs" />
     <Compile Include="TradeLoader.cs" />
   </ItemGroup>
   <ItemGroup>
